# sdl2_sample

./: CMakeLists.txt
cmake/: FindSDL2.cmake
src/: main.c
